added gcp project

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>KYLE ROZIC</h2>
-							<p>Data analyst with experience cleaning, analyzing, visualizing and interpreting data. Enjoys exploring and analyzing large datasets to extract actionable insights and would like to use these skills to increase performance and identify advantageous business opportunities.<br />
+							<p>Data Analyst with experience visualizing and curating user data to increase company product success. Proficient in the exploration and analysis of large datasets to extract actionable insights. Superior ability to prioritize and communicate information to a range of teams, from technical teams to account managers.<br />
 							<br />
 							<br />
 							</p>
@@ -94,6 +94,20 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
+							<div class="image"><img src="images/google_cloud_platform.jpg" alt="" /></div><div class="content">
+								<h2>Google Analytics Dashboard</h2>
+								<p></p>
+								<p><a href="https://github.com/krozic/google_merch_store">View Github</a> | <a href="https://public.tableau.com/app/profile/kyle.rozic/viz/google_merch_store/Dashboard">View App</a></p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/word_cloud.jpg" alt="" /></div><div class="content">
+								<h2>Word Prediction Model</h2>
+								<p>Developed an application in `shiny` which accepts a string of words and returns a table of recommendations sorted by probability. The `tidytext` package in R was used for processing, cleaning and analyzing the data, while `ggplot2` was used for visualizations.</p>
+								<p><a href="https://www.kylerozic.com/Word-Prediction-Model/">View Report</a> | <a href="https://github.com/krozic/Word-Prediction-Model">View Github</a> | <a href="https://krozic.shinyapps.io/Word_Prediction_Application/">View App</a></p>
+							</div>
+						</section>
+						<section class="spotlight">
 							<div class="image"><img src="images/Canada-Population.jpg" alt="" /></div><div class="content">
 								<h2>Canada Population Dashboard</h2>
 								<p>An interactive map showing division population changes based on user chosen dates.  The packages `dplyr` and `data.table` in R were used to process and clean the raw population and shape data and the package `shiny` was used to build the application UI. Data was sourced from <a href="https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=1710013901">Statistics Canada</a>.</p>
@@ -101,25 +115,18 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/Word-Predictor.jpg" alt="" /></div><div class="content">
-								<h2>Swiftkey Word Predictor</h2>
-								<p>An application that accepts a string of words and predicts the next word using a corpus sample extracted from the SwiftKey dataset provided by Coursera. The `tidytext` package in R was used for processing, cleaning and analyzing the data, while `ggplot2` was used for visualizations. Shiny was used to build the application UI.</p>
-								<p><a href="https://www.kylerozic.com/SwiftKey-Word-Predictor/">View Report</a> | <a href="https://github.com/krozic/SwiftKey-Word-Predictor">View Github</a> | <a href="https://krozic.shinyapps.io/Word_Prediction_Application/">View App</a></p>
+							<div class="image"><img src="images/covid19.jpg" alt="" /></div><div class="content">
+								<h2>Covid-19 Data Dashboard</h2>
+								<p>Statistics and research data was sourced from <a href="https://ourworldindata.org/covid-deaths">Our World in Data</a> to visualize how covid-19 has spread over time and between countries. The data was explored and cleaned with Microsoft SQL and visualized in Tableau.</p>
+								<p><a href="https://github.com/krozic/Covid-Visualization-Tableau">View Github</a> | <a href="https://public.tableau.com/app/profile/kyle.rozic/viz/CovidVisualization_16319417831480/Dashboard1?publish=yes"> View App</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/Human-Activity-Prediction.jpg" alt="" /></div><div class="content">
 								<h2>Human Activity Prediction Using Machine Learning</h2>
 								<p>This project employs the `caret` package in R to build machine learning models that can predict which exercise an individual is performing from wearable sensor data. 
-								The data for this project was sourced from the <a href="https://archive.ics.uci.edu/ml/datasets/Wearable+Computing%3A+Classification+of+Body+Postures+and+Movements+(PUC-Rio)">UCI repo</a> for PUC-Rio.</p>
+								The data for this project was sourced from UCI Machine Learning Repository</p>
 								<p><a href="https://krozic.github.io/Human-Activity-Recognition-with-caret/">View Report</a> | <a href="https://github.com/krozic/Human-Activity-Recognition-with-caret">View Github</a></p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/covid19.jpg" alt="" /></div><div class="content">
-								<h2>Covid-19 Data Dashboard</h2>
-								<p>Statistics and research data was sourced from <a href="https://ourworldindata.org/covid-deaths">Our World in Data</a> to visualize how covid-19 has spread over time and between countries. The data was explored and cleaned with Microsoft SQL and visualized in Tableau.</p>
-								<p><a href="https://github.com/krozic/Covid-Visualization-Tableau">View Github</a> | <a href="https://public.tableau.com/app/profile/kyle.rozic/viz/CovidVisualization_16319417831480/Dashboard1?publish=yes"> View App</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
