added gcp description

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/google_cloud_platform.jpg" alt="" /></div><div class="content">
 								<h2>Google Analytics Dashboard</h2>
-								<p></p>
+								<p>Extract-transform-loaded (ETL): GA data (1.4 million records) ➜ BigQuery ➜ Google Cloud Storage ➜ Tableau Server Connection. <br><br> BigQuery was used to calculate desirable metrics (Page views, time on page, bounces, sessions) for use as KPIs in Tableau. Created filters and parameters for segmentation and comparison analysis.</p>
 								<p><a href="https://github.com/krozic/google_merch_store">View Github</a> | <a href="https://public.tableau.com/app/profile/kyle.rozic/viz/google_merch_store/Dashboard">View App</a></p>
 							</div>
 						</section>
