--- a/index.html
+++ b/index.html
@@ -130,6 +130,13 @@
 							</div>
 						</section>
 						<section class="spotlight">
+							<div class="image"><img src="images/pyodbc.jpg" alt="" /></div><div class="content">
+								<h2>IMDB Ratings Visualization</h2>
+								<p>Two tables from <a href="https://www.imdb.com/interfaces/">IMDB</a> and one table from <a href="https://www.kaggle.com/stefanoleone992/imdb-extensive-dataset">Stefano Leone</a> were downloaded and imported into a MS SQL database. The tables were explored using SQL and table views were created for visualization in python. The API python package `pyodbc` was used to interface with the MS SQL database and queries were stored in `pandas` dataframes to visualize with `matplotlib`.</p>
+								<p><a href="https://github.com/krozic/imdb_ratings">View Github</a> | Report in Progress</p>
+							</div>
+						</section>
+						<section class="spotlight">
 							<div class="image"><img src="images/NOAA NWS-Tall.jpg" alt="" /></div><div class="content">
 								<h2>Weather Data Cleaning and Visualization in R</h2>
 								<p>Storm data spanning from 1950-2011 was acquired from the National Weather Service. This data was processed and analyzed to determine which weather related events were the most costly to human life as well as property and crops.</p>
@@ -225,7 +232,7 @@
 							<li><a href="https://github.com/krozic" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; 2021 Kyle Rozic</li><li>Host: <a href="https://github.com/krozic/krozic.github.io">Github</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; 2022 Kyle Rozic</li><li>Host: <a href="https://github.com/krozic/krozic.github.io">Github</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
