--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/word_cloud.jpg" alt="" /></div><div class="content">
-								<h2>Word Prediction Model</h2>
-								<p>Developed an application in `shiny` which accepts a string of words and returns a table of recommendations sorted by probability. The `tidytext` package in R was used for processing, cleaning and analyzing the data, while `ggplot2` was used for visualizations.</p>
-								<p><a href="https://www.kylerozic.com/Word-Prediction-Model/">View Report</a> | <a href="https://github.com/krozic/Word-Prediction-Model">View Github</a> | <a href="https://krozic.shinyapps.io/Word_Prediction_Application/">View App</a></p>
+							<div class="image"><img src="images/film_genre_ranking.jpg" alt="" /></div><div class="content">
+								<h2>IMDB Ratings Visualization</h2>
+								<p>Two tables from <a href="https://www.imdb.com/interfaces/">IMDB</a> and one table from <a href="https://www.kaggle.com/stefanoleone992/imdb-extensive-dataset">Stefano Leone</a> were downloaded and imported into a MS SQL database. The tables were explored using SQL and table views were created for visualization in python. The API python package `pyodbc` was used to interface with the MS SQL database and queries were stored in `pandas` dataframes to visualize with `matplotlib`.</p>
+								<p><a href="https://github.com/krozic/imdb_ratings">View Github</a> | <a href="https://imdb-genre-rank.herokuapp.com/">View App</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -119,6 +119,13 @@
 								<h2>Spotify Recently Played Songs</h2>
 								<p>Extracted personal data from Spotify API using OAuth 2.0 framework and the authorization code flow structure for long-running apps. Transformed this raw data into a data frame using `pandas` & loaded resulting data frame into SQL Server database using `pyodbc` and `SQLAlchemy` to append new data. Scheduled the above batch ETL process using Apache Airflow.</p>
 								<p><a href="https://github.com/krozic/spotify_recent_song_etl">View Github</a></p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/word_cloud.jpg" alt="" /></div><div class="content">
+								<h2>Word Prediction Model</h2>
+								<p>Developed an application in `shiny` which accepts a string of words and returns a table of recommendations sorted by probability. The `tidytext` package in R was used for processing, cleaning and analyzing the data, while `ggplot2` was used for visualizations.</p>
+								<p><a href="https://www.kylerozic.com/Word-Prediction-Model/">View Report</a> | <a href="https://github.com/krozic/Word-Prediction-Model">View Github</a> | <a href="https://krozic.shinyapps.io/Word_Prediction_Application/">View App</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -141,13 +148,6 @@
 								<p>This project employs the `caret` package in R to build machine learning models that can predict which exercise an individual is performing from wearable sensor data. 
 								The data for this project was sourced from UCI Machine Learning Repository</p>
 								<p><a href="https://krozic.github.io/Human-Activity-Recognition-with-caret/">View Report</a> | <a href="https://github.com/krozic/Human-Activity-Recognition-with-caret">View Github</a></p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pyodbc.jpg" alt="" /></div><div class="content">
-								<h2>IMDB Ratings Visualization</h2>
-								<p>Two tables from <a href="https://www.imdb.com/interfaces/">IMDB</a> and one table from <a href="https://www.kaggle.com/stefanoleone992/imdb-extensive-dataset">Stefano Leone</a> were downloaded and imported into a MS SQL database. The tables were explored using SQL and table views were created for visualization in python. The API python package `pyodbc` was used to interface with the MS SQL database and queries were stored in `pandas` dataframes to visualize with `matplotlib`.</p>
-								<p><a href="https://github.com/krozic/imdb_ratings">View Github</a> | <a href="https://imdb-genre-rank.herokuapp.com/">View App</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
