Added new film rank app

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/film_genre_ranking.jpg" alt="" /></div><div class="content">
 								<h2>IMDB Ratings Visualization</h2>
-								<p>Two tables from <a href="https://www.imdb.com/interfaces/">IMDB</a> and one table from <a href="https://www.kaggle.com/stefanoleone992/imdb-extensive-dataset">Stefano Leone</a> were downloaded and imported into a MS SQL database. The tables were explored using SQL and table views were created for visualization in python. The API python package `pyodbc` was used to interface with the MS SQL database and queries were stored in `pandas` dataframes to visualize with `matplotlib`.</p>
-								<p><a href="https://github.com/krozic/imdb_ratings">View Github</a> | <a href="https://imdb-genre-rank.herokuapp.com/">View App</a></p>
+								<p>This application takes a chosen film as an input and creates a plot and table describing the rank of the film for the specific genres it is categorized in. <br><br> 2 datasets, 2 APIs, and a web crawler comprise the backend data handling for this project and the data visualization framework `Dash` was used for the application frontend.</p>
+								<p><a href="https://github.com/krozic/imdb_ratings/tree/main/app">View Github</a> | <a href="https://imdb-genre-rank.herokuapp.com/">View App</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
